tmux config refreshed a bit

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,9 +3,38 @@
 # Belongs at ~/.tmux.conf
 # Remember to install tmux plugin manager tpm
 
+set -g default-terminal "screen-256color"
+
+# Faster command sequence
+set -sg escape-time 0
+
+# emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set -g status-keys emacs
+
+# focus events enabled for terminals that support them
+set -g focus-events on
+
+# Have a very large history
+set -g history-limit 1000000
+
+# use Ctrl+b as prefix
 unbind C-b
 set -g prefix C-b
 bind C-b send-prefix
+
+# use Ctrl+a as prefix
+# set -g prefix C-a
+# unbind C-b
+# bind-key C-a send-prefix
+
+# use | for vertical split
+unbind %
+bind | split-window -h
+
+# use - for vertical split
+unbind '"'
+bind - split-window -v
 
 bind -n DoubleClick1Pane { 
    setw -g word-separators ' @"=()[]:'
@@ -23,11 +52,10 @@ bind -n M-DoubleClick1Pane {
 run-shell -t 0 "echo \"#{mouse_word}\" | pbcopy"
 }
 
-
 # Prevent Tmux from jumping back to the prompt on drag end
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# Control b control k will clear history
+# Ctrl+k will clear history
 bind -n C-k clear-history;
 # bind -n C-h clear-history
 
@@ -54,6 +82,8 @@ bind -n C-l copy-mode\;\
 # set-option -g default-shell /usr/local/bin/zsh
 # set-option -g default-shell /bin/zsh
 
+# reload tmux config on <prefix>r
+unbind r
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
 # Control b - then c will create a new window
@@ -146,12 +176,8 @@ bind-key -T edit-mode-vi Down send-keys -X history-down
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection\; run "tmux save -|pbcopy >/dev/null 2>&1"
 
-# emacs key bindings in tmux command prompt (prefix + :) are better than
-# vi keys, even for vim users
-set -g status-keys emacs
-
-# focus events enabled for terminals that support them
-set -g focus-events on
+# Disable confirm before killing
+bind-key x kill-pane
 
 # Sync panes (Send input to all panes in the window). When enabled, pane
 # borders become red as an indication.
@@ -163,12 +189,6 @@ bind C-s if -F '#{pane_synchronized}' \
                     setw pane-active-border-style fg=red; \
                     setw pane-border-format       " #P - Pane Synchronization ON "'
 
-# Faster command sequence
-set -s escape-time 0
-
-# Have a very large history
-set -g history-limit 1000000
-
 # Mouse mode on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g mouse on
@@ -176,9 +196,6 @@ set -g mouse on
 # Set title
 set -g set-titles on
 set -g set-titles-string "#T"
-
-# Disable confirm before killing
-bind-key x kill-pane
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Nov 2015
@@ -198,26 +215,26 @@ set -g status-left "#{prefix_highlight}#[fg=colour22,bg=colour148,bold] #S #[fg=
 # This is without all that: - just the branch name and repo name / folder name
 set -g status-right "#[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour240] %Y-%m-%d %H:%M #[fg=colour252,bg=colour240,nobold,nounderscore,noitalics] #[fg=colour228,bg=colour238] #(cd #{pane_current_path}; basename `git rev-parse --show-toplevel`) #[fg=colour223,bg=colour238] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD | cut -c1-25) #[fg=colour250,bg=colour236]   #h"
 
-
 setw -g window-status-separator ""
 setw -g window-status-format " #[fg=colour245,bg=colour236] #I #[fg=colour245,bg=colour236]#W "
 setw -g window-status-current-format "#[fg=colour236,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour240] #I #[fg=colour231,bg=colour240]#{?window_zoomed_flag,#[fg=green][],}#W #[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]"
 
 # List of plugins
-# see this https://github.com/tmux-plugins/tpm to installation
-# https://github.com/tmux-plugins/tpm
-#
-# mkdir -p ~/.tmux/plugins
-# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-#
-# set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
 #run-shell /Users/bbarrows/repos/tmux-thumbs/tmux-thumbs.tmux
 #set -g @thumbs-command 'echo -n {} | pbcopy'
