--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,10 @@ bind | split-window -h
 unbind '"'
 bind - split-window -v
 
+# control b - v/f will split the current window veritically then horizontally
+# bind-key v split-window -h -c '#{pane_current_path}'
+# bind-key f split-window -v -c '#{pane_current_path}'
+
 bind -n DoubleClick1Pane { 
    setw -g word-separators ' @"=()[]:'
    run-shell -t 0 "tmha #{mouse_word}"
@@ -98,10 +102,6 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
-# control b - v/f will split the current window veritically then horizontally
-bind-key v split-window -h -c '#{pane_current_path}'
-bind-key f split-window -v -c '#{pane_current_path}'
-
 # Start window counts at 1
 set -g base-index 1
 setw -g pane-base-index 1
@@ -118,15 +118,11 @@ set -g display-panes-time 2000
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
-# {n}vim compability
-set -g default-terminal "screen-256color"
-
-
 # Just use Control B - Arrow key to switch pane
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
+# bind -n M-Up select-pane -U
+# bind -n M-Down select-pane -D
+# bind -n M-Left select-pane -L
+# bind -n M-Right select-pane -R
 
 # Search through tmux hsitory with Control B /
 bind-key / copy-mode \; send-key ?
@@ -138,13 +134,11 @@ bind-key / copy-mode \; send-key ?
 # bind-key h resize-pane -L 10
 # bind-key l resize-pane -R 10
 
-# Select panes 
-# bind-key j select-pane -D 
-# bind-key k select-pane -U 
-# bind-key h select-pane -L 
-# bind-key l select-pane -R 
-
-
+# Select panes with jkhl
+bind-key j select-pane -D 
+bind-key k select-pane -U 
+bind-key h select-pane -L 
+bind-key l select-pane -R 
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -184,13 +178,6 @@ set -g set-titles-string "#T"
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Nov 2015
-set -g status "on"
-set -g status-bg "colour236" 
-set -g status-justify "left"
-set -g status-position "bottom"
-set -g status-left-length "100"
-set -g status-right-length "100"
-set -g status-left "#{prefix_highlight}#[fg=colour22,bg=colour148,bold] #S #[fg=colour148,bg=colour236,nobold,nounderscore,noitalics]"
 
 # Git status bar right now shows:
 # DATE_TIME REPO_NAME BRANCH_NAME NUMBER_OF_MODIFIED_FILES NUMBER_OF_UNTRACKED_FILED HOSTNAME
@@ -198,15 +185,12 @@ set -g status-left "#{prefix_highlight}#[fg=colour22,bg=colour148,bold] #S #[fg=
 #set -g status-right "#[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour240] %Y-%m-%d %H:%M #[fg=colour252,bg=colour240,nobold,nounderscore,noitalics] #[fg=colour228,bg=colour238] #(cd #{pane_current_path}; basename `git rev-parse --show-toplevel`) #[fg=colour223,bg=colour238] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD | cut -c1-25) #[fg=colour250,bg=colour236] #[fg=colour220,bg=colour238] #(cd #{pane_current_path}; git status -s -uno | wc -l | sed 's/[ ]*//' )  #[fg=colour221,bg=colour238] #(cd #{pane_current_path};git ls-files --others --exclude-standard | wc -l | sed 's/[ ]*//'  )  #[fg=colour241,bg=colour252] #h"
 
 # This is without all that: - just the branch name and repo name / folder name
-set -g status-right "#[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour240] %Y-%m-%d %H:%M #[fg=colour252,bg=colour240,nobold,nounderscore,noitalics] #[fg=colour228,bg=colour238] #(cd #{pane_current_path}; basename `git rev-parse --show-toplevel`) #[fg=colour223,bg=colour238] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD | cut -c1-25) #[fg=colour250,bg=colour236]   #h"
 
-setw -g window-status-separator ""
-setw -g window-status-format " #[fg=colour245,bg=colour236] #I #[fg=colour245,bg=colour236]#W "
-setw -g window-status-current-format "#[fg=colour236,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour240] #I #[fg=colour231,bg=colour240]#{?window_zoomed_flag,#[fg=green][],}#W #[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
@@ -217,6 +201,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# set theme
+# set -g @themepack 'basic' # (default)
+# set -g @themepack 'powerline/block/blue'
+# set -g @themepack 'powerline/default/green'
+set -g @themepack 'powerline/block/yellow'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
