fix typo in font family

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,7 +25,7 @@
 #:     bold_italic_font Operator Mono Medium Italic
 #
 
-font_family      JetBrainsMono Nerd Fond
+font_family      JetBrainsMono Nerd Font
 
 font_size 14.0
 
