--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -762,7 +762,8 @@ draw_minimal_borders yes
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations titlebar-only # yes no
+hide_window_decorations titlebar-only
+# yes no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
