--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -883,7 +883,7 @@ tab_bar_style powerline
 #:     for the select_tab action which presents you with a list of tabs and
 #:     allows for easy switching to a tab.
 
-# tab_bar_align left
+tab_bar_align left
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
@@ -915,7 +915,7 @@ tab_bar_style powerline
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_powerline_style round
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
