--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -743,7 +743,7 @@ draw_minimal_borders yes
 #: placed centrally. A value of top-left means the padding will be
 #: only at the bottom and right edges.
 
-# active_border_color #00ff00
+active_border_color #aaff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
@@ -973,14 +973,14 @@ tab_powerline_style slanted
 active_tab_foreground   #ffff00
 active_tab_background   #fa00aa
 active_tab_font_style   bold
-inactive_tab_foreground #111
-inactive_tab_background #666
+inactive_tab_foreground #ffffff
+inactive_tab_background #25233a
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
 
 # tab_bar_background none
-tab_bar_background #fa00aa
+tab_bar_background #181622
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -995,7 +995,7 @@ tab_bar_margin_color none
 #: Color scheme {{{
 
 # foreground #dddddd
-# background #000000
+background #191724
 
 #: The foreground and background colors.
 
@@ -1054,8 +1054,8 @@ tab_bar_margin_color none
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-# selection_foreground #000000
-# selection_background #fffacd
+selection_foreground #000000
+selection_background #faff00
 
 #: The foreground and background colors for text selected with the
 #: mouse. Setting both of these to none will cause a "reverse video"
