--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1768,7 +1768,7 @@ macos_option_as_alt yes
 
 #: New window
 
-# map kitty_mod+enter new_window
+map kitty_mod+enter new_window_with_cwd
 # map cmd+enter       new_window
 
 #::  You can open a new kitty window running an arbitrary program, for
@@ -1919,8 +1919,8 @@ macos_option_as_alt yes
 
 #: New tab
 
-# map kitty_mod+t new_tab
-# map cmd+t       new_tab
+map kitty_mod+t new_tab_with_cwd
+map cmd+t       new_tab
 
 #: Close tab
 
