--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -190,6 +190,8 @@ set -g set-titles-string "#T"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-yank'
